--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
 <body class="bg-slate-50 text-slate-800">
   <header class="bg-slate-900 text-white">
     <div class="max-w-5xl mx-auto px-4 py-8">
-      <h1 class="text-3xl md:text-4xl font-black tracking-tight">Отчёты по сотрудникам</h1>
-      <p class="text-slate-300 mt-2">Фильтруйте по имени и по месяцу</p>
+      <h1 class="text-3xl md:text-4xl font-black tracking-tight">Отчёты по смыслам</h1>
+      <p class="text-slate-300 mt-2">Поиск по ФИО</p>
 
       <div class="mt-6 grid md:grid-cols-3 gap-3">
         <div class="md:col-span-2">
@@ -33,14 +33,14 @@
           <select id="month"
                   class="w-full rounded-2xl px-5 py-4 text-base bg-white text-black shadow
                          focus:outline-none focus:ring-4 focus:ring-blue-300">
-            <option value="">Все месяцы</option>
+            <option value="">Месяц</option>
           </select>
 
           <label class="sr-only" for="year">Год</label>
           <select id="year"
                   class="w-full rounded-2xl px-5 py-4 text-base bg-white text-black shadow
                          focus:outline-none focus:ring-4 focus:ring-blue-300">
-            <option value="">Все годы</option>
+            <option value="">Год</option>
           </select>
         </div>
       </div>
